--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<div class="pic home-picture" style="background: url(assets/images/homebg.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
-					<h3>Xiao's Website</h3>
+					<h3>Leila's Website</h3>
 				</div>
 			</div>
 		</div>
