--- a/FloodInnundation.html
+++ b/FloodInnundation.html
@@ -108,10 +108,9 @@
                 <div class="icons">
                     <ul>
                       <li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
-          						<li><a target="_BLANK" href="https://github.com/EchoWOO"><i class="fa fa-github"></i> </a></li>
-          						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
-          						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
-          						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->
+          						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
+          						<li><a target="_BLANK" href="https://www.facebook.com/people/lili Bahrami/100008072611716"><i class="fa fa-facebook"></i> </a></li>
+          						<!-- <li><a target="_BLANK" href="https://www.instagram.com/leyli_bahrami/"><i class="fa fa-instagram"></i> </a></li> -->
           						<!-- <li><a target="_BLANK" href="http://behance.net/"><i class="fa fa-behance"></i></a></li> -->
           						<li><a target="_BLANK" href="https://public.tableau.com/profile/xiao.wu#!/"><i class="fa fa-bar-chart"></i></a></li>
                     </ul>
