--- a/FloodInnundation.html
+++ b/FloodInnundation.html
@@ -62,7 +62,7 @@
                         <img src="assets/images/calgary_Features.jpg" alt="">
                         <br>
                         <br>
-                        <img src="assets/images/allfeatures-1.png" alt="">
+                        <img src="assets/images/allfeatures-1.jpg" alt="">
                         <br>
                         <br>
                         <img src="assets/images/FloodInnundation2.jpg" alt="">
