--- a/FloodInnundation.html
+++ b/FloodInnundation.html
@@ -91,11 +91,11 @@
                           </p>
                         <div class="details">
                             <h6> Teammate </h6>
-                            <span>Evan Cernea</span>
+                            <span>Elizabeth Haitian Wang</span>
                             <h6> Categories </h6>
                             <span>Predictive Modeling</span>
                             <h6> Date </h6>
-                            <span>03/18/2018</span>
+                            <span>03/26/2020</span>
                         </div>
                     </div>
                 </div>
