--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 						<img src="assets/images/Venmo-02.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="VenmoCard.html">Venmo Card
+								<h3><a href="InterpretingLandCover.html">Interpreting LandCover
 									<br>
-									Business Analytics</a></h3>
-								<h5><a href="VenmoCard.html">Venmo Card KPIs Analytics and Dashboard Design</a></h5>
+									</a></h3>
+								<h5><a href="InterpretingLandCover.html">Enhancing Remote Sensing Literacy for Environmental Impact Studies</a></h5>
 							</div>
 						</div>
 					</div>
