--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 selector data">
 					<div class="item">
-						<img src="assets/images/Landcover_bg.jpg" alt="">
+						<img src="assets/images/Land-Ahoy.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
 								<h3><a href="InterpretingLandCover.html">Interpreting LandCover
