--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 selector geo">
 					<div class="item">
-						<img src="assets/images/MonarchButterfly.jpg" alt="">
+						<img src="assets/images/GreenNewDeal_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="MonarchButterfly.html">Where are the <br>Monarch Butterflies?</a></h3>
-								<h5><a href="MonarchButterfly.html">A Brief Exploration of
-Monarch Butterfly Population Change from 1997-2007
-Using Google Earth Engine API and ArcPy</a></h5>
+								<h3><a href="MonarchButterfly.html">Designing a <br>Green New Deal</a></h3>
+								<h5><a href="MonarchButterfly.html">The spatial politics for our response
+to climate change for decarbonization through regenerative agriculture, 
+factory closures, and ecological restoration</a></h5>
 							</div>
 						</div>
 					</div>
