--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@ based on the Census data from 2010 to 2016</a></h5>
 				</div> -->
 				<div class="col-md-4 col-sm-6 col-xs-12 selector data">
 					<div class="item">
-						<img src="assets/images/Minneapolis.png" alt="">
+						<img src="assets/images/UrbanGrowth_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="LeadInspection.html">Predicting Household <br> Lead Inspection Result <br>in Minneapolis</a></h3>
+								<h3><a href="LeadInspection.html">Predicting Urban Growth <br> 2020 Developement Demand <br>in Delaware valley Region</a></h3>
 								<h5><a href="LeadInspection.html">Using logistic regression, random forest and extreme gradient boosting</a></h5>
 							</div>
 						</div>
