--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 selector geo">
 					<div class="item">
-						<img src="assets/images/Audubon.jpg" alt="">
+						<img src="assets/images/Distichlis-Sensing_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
 								<h3><a href="AudubonAlaska.html">Ecological Analysis of
