--- a/index.html
+++ b/index.html
@@ -86,11 +86,9 @@
 						<img src="assets/images/Distichlis-Sensing_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="AudubonAlaska.html">Ecological Analysis of
-									<br>the Arctic National
-									<br>Wildlife Refuge</a></h3>
-								<h5><a href="AudubonAlaska.html">Azavea Summer of Maps Project:
-									<br>Ecological Analysis of Arctic National Wildlife Refuge with Audubon Alaska</a></h5>
+								<h3><a href="AudubonAlaska.html">Distichlis Sensing
+									<h5><a href="AudubonAlaska.html">Environmental Modeling Lab Project:
+									<br>Using UAS multispectral imagery to improve marsh classification in NJ Coast</a></h5>
 							</div>
 						</div>
 					</div>
