--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 						<div class="overlay">
 							<div class="overlay-inner">
 								<h3><a href="MonarchButterfly.html">Designing a <br>Green New Deal</a></h3>
-								<h5><a href="MonarchButterfly.html">The spatial politics for our response
+								<h5><a href="MonarchButterfly.html">ASLA Award Project:
+									The spatial politics for our response
 to climate change for decarbonization through regenerative agriculture, 
 factory closures, and ecological restoration</a></h5>
 							</div>
