--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ factory closures, and ecological restoration</a></h5>
 
 				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
 					<div class="item">
-						<img src="assets/images/ED.jpg" alt="">
+						<img src="assets/images/EPA_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
 								<h3><a href="ED.html">The Exchange District</a></h3>
