--- a/index.html
+++ b/index.html
@@ -124,12 +124,13 @@ factory closures, and ecological restoration</a></h5>
 
 				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
 					<div class="item">
-						<img src="assets/images/EPA_bg.jpg" alt="">
+						<img src="assets/images/EPA_bg1.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="ED.html">The Exchange District</a></h3>
-								<h5><a href="ED.html">Exchanging challenges with opportunities and risks with strengths for Toronto,
-Urban Land Institute (ULI) Hines Student Competition Entry</a></h5>
+								<h3><a href="ED.html">Campus Rainwork Challenge: Growing Together</a></h3>
+								<h5><a href="ED.html">EPA Award Project: A COMMUNITY FOOD FOREST FOR STORMWATER
+MANAGEMENT AT ANDREW HAMILTON
+SCHOOL</a></h5>
 							</div>
 						</div>
 					</div>
