--- a/InterpretingLandCover.html
+++ b/InterpretingLandCover.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="logo">
-                            <h2><a href="index.html">Xiao WU</a></h2>
+                            <h2><a href="index.html">Leila Bahrami</a></h2>
                         </div>
                     </div>
                     <div class="col-md-8">
