--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@ based on the Census data from 2010 to 2016</a></h5>
 		</div>
 		<footer>
 			<div class="main-footer">
-				<p> Copyright © 2019 By Xiao WU</p>
+				<p> Copyright © 2019 By Leila Bahrami</p>
 				<p>Made with Bootstrap Jquery.</p>
 				<div class="icons">
 					<ul>
-						<li><a target="_BLANK" href="https://www.linkedin.com/in/xiaowu2018"><i class="fa fa-linkedin"></i> </a></li>
+						<li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
 						<li><a target="_BLANK" href="https://github.com/EchoWOO"><i class="fa fa-github"></i> </a></li>
 						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
 						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
