--- a/InterpretingLandCover.html
+++ b/InterpretingLandCover.html
@@ -50,18 +50,18 @@
             <div class="pic index2-picture" style="background: url(assets/images/Land-Ahoy-bg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3><strong>Predicting
+                    <h3><strong>Interpreting
                       <br>
                       <br>
-                      Food Inspection Failure
+                      LandCover
                       <br>
                       <br>
-                      in Chicago</strong>
+                      in New Jersey Coast</strong>
                     </h3>
                     <br>
                     <br>
-                    <h4>And Designing An App Using Logistic Regression<br>
-                      <br>to Help Parents Find Healthy Children’s Food in Chicago
+                    <h4>Enhancing Remote Sensing Literacy and landcover accuracy <br>
+                      <br>for Environmental Impact Studies
                     </h4>
                 </div>
             </div>
@@ -79,38 +79,35 @@
                         <h3>Predicting Food Inspection Failure in Chicago</h3>
                         <br>
                         <h4><b>Intro</b></h4>
-                        <p>This project aims to improve wetland land cover classification in coastal New Jersey using high-resolution data collected through Unmanned Aerial Vehicles (UAVs) equipped with multispectral cameras. In this project we use multispectral imagery to better distinguish between wetland types, such as high and low marsh areas, which are typically oversimplified. 
+                        <p>This project aims to improve wetland land cover classification in Great Bay, New Jersey coastal area using high-resolution data collected through Unmanned Aerial Vehicles (UAVs) equipped with multispectral cameras. In this project we use multispectral imagery to better distinguish between wetland types, such as high and low marsh areas, which are typically oversimplified in thematic data such as that provided by the National Land Cover Database (NLCD).  
                           <br>
                           <br>
-                          <h4><b>App Design</b></h4>
+                          <h4><b>Classification Methodology</b></h4>
                           <br>
-                          The enhanced dataset will allow for more accurate identification of water boundaries and wetland classifications, essential for managing flood risks and ecosystem health in coastal areas. In this project, I developed a detailed landcover classification for wetland area. Comparing NLCD data with UAV-collected data revealed significant improvements in detail and accuracy, leading to better environmental impact studies and more informed policy decisions. This approach offers a scalable solution for improving land cover data in other at-risk coastal regions, ultimately supporting more effective environmental management and conservation efforts.
-                          <br>
-                          <br>
-                          <h4><b>Data</b></h4>
-                          <br>
-                          The data of building this model comes from the primary data set of food inspection in Chicago. In the model, we used the daycare centers’ 2015 to 2016 data. The independent variables are mostly found from online open data sets including Chicago Open data, which include the daycare center previous inspection result, the community’s sanitary data, social economic data and statistics about the residents’ health conditions.
+                          The enhanced dataset will allow for more accurate identification of water boundaries and wetland classifications, essential for managing flood risks and ecosystem health in coastal areas. In this project, I worked extensively with high-resolution, multi-band imagery and employed supervised classification using Support Vector Machine (SVM) algorithms to develop a detailed land cover classification for the wetland area, based on training sample wavelengths.
                           <br>
                           <br>
-                          The logic behind the APP is a logistic regression model. It has a high AUC value of 0.81, which indicates that there might be 19 percent error in the food inspection results, which is good in accuracy but not over predicting. By checking the results spatially, the high probabilities of pass are all located close to the results of pass, and the results of significant coefficients are not surprising because the sanitary condition complaints and the history inspection results are displayed as most significant predictors. 
+                          <h4><b>International Classifications</b></h4>
+                          <br>
+                          Additionally, I applied various international land cover classification standards to the same area to achieve the best results. The application of these different classification systems clearly demonstrates how the spatial and thematic structures of each system shape our understanding of the landscape. A comparison of the legends highlights both similarities and differences in how land cover themes are defined.
                           <br>
                           <br>
                           <h4><b>Conclusion</b></h4>
                           <br>
-                          As a conclusion, we would recommend the Food Protection Division of the Chicago Department of Public Health to promote our model to the public. It’s not only because the model behind the APP has a high goodness of fit, but also because it has included quite a lot of local intelligence and helps with building up public participation in building up good food safety environment. Since our sample size is relatively small, we might need further improvement for the data collection.
+                          Comparing NLCD data with UAV-collected data revealed significant improvements in detail and accuracy, leading to better environmental impact studies and more informed policy decisions. This approach offers a scalable solution for improving land cover data in other at-risk coastal regions, ultimately supporting more effective environmental management and conservation efforts.
                           <br>
                           <br>
                         </p>
 
                         <div class="btn-load-more">
-            						<a class="load-more" href="https://emlabupenn.com/Land-Ahoy">EMLAB Project</a>
+            						<a class="load-more" href="https://emlabupenn.com/Land-Ahoy">Project Website</a>
                         </div>
                         
                         <div class="details">
                             <h6> Advisor </h6>
                             <span>Karen M’Closkey and Keith VanDerSys</span>
                             <h6> Categories </h6>
-                            <span>Remote Sensing , ARCGIS</span>
+                            <span>Remote Sensing , ArcGIS</span>
                             <h6> Date </h6>
                             <span>09/2020 – 04/2021</span>
                         </div>
@@ -120,7 +117,7 @@
         </div>
         <footer>
             <div class="main-footer">
-                <p> Copyright © 2019 By Leila Bahrami</p>
+                <p> Copyright © 2024 By Leila Bahrami</p>
                 <p>Made with Bootstrap Jquery.</p>
                 <div class="icons">
                     <ul>
