--- a/InterpretingLandCover.html
+++ b/InterpretingLandCover.html
@@ -99,8 +99,8 @@
                           <br>
                         </p>
 
-                        <div class="btn-load-more">
-            						<a class="load-more" href="https://emlabupenn.com/Land-Ahoy">Project Site</a>
+                        <div class="btn-load-more"><a class="load-more" href="https://emlabupenn.com/Land-Ahoy">Project Website</a></div>
+
                         </div>
                         
                         <div class="details">
