--- a/InterpretingLandCover.html
+++ b/InterpretingLandCover.html
@@ -99,7 +99,7 @@
                           <br>
                         </p>
 
-                        <div class="btn-load-more"><a class="load-more" href="https://emlabupenn.com/Land-Ahoy">Project Website</a></div>
+                        <div class="btn-load-more"><a class="load-more" href="https://emlabupenn.com/Land-Ahoy">Project Website</div>
 
                         </div>
                         
