--- a/InterpretingLandCover.html
+++ b/InterpretingLandCover.html
@@ -100,7 +100,7 @@
                         </p>
 
                         <div class="btn-load-more">
-                        <a class="load-more" href="https://emlabupenn.com/Land-Ahoy">Project Website</a>
+                        < class="load-more" href="https://emlabupenn.com/Land-Ahoy">Project Websit>
 
                         </div>
                         
