--- a/InterpretingLandCover.html
+++ b/InterpretingLandCover.html
@@ -100,7 +100,9 @@
                         </p>
 
                         <div class="btn-load-more">
-                        < class="load-more" href="https://emlabupenn.com/Land-Ahoy">Project Websit>
+                        <a class="load-more" href="https://emlabupenn.com/Land-Ahoy">Project Website</a>
+                        </div>
+
 
                         </div>
                         
