--- a/InterpretingLandCover.html
+++ b/InterpretingLandCover.html
@@ -50,10 +50,10 @@
             <div class="pic index2-picture" style="background: url(assets/images/Landcover_bg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3><strong>Interpreting
+                    <h3><strong>Interpreting LandCover
                       <br>
                       <br>
-                      LandCover
+                      
                       <br>
                       <br>
                       in New Jersey Coast</strong>
