--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 						<img src="assets/images/Distichlis-Sensing_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="AudubonAlaska.html">Distichlis Sensing
-									<h5><a href="AudubonAlaska.html">Environmental Modeling Lab Project:
+								<h3><a href="DistichlisSensing.html">Distichlis Sensing
+									<h5><a href="DistichlisSensing.html">Environmental Modeling Lab Project:
 									<br>Using UAS multispectral imagery to improve marsh classification in NJ Coast</a></h5>
 							</div>
 						</div>
