--- a/DistichlisSensing.html
+++ b/DistichlisSensing.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="logo">
-                            <h2><a href="index.html">Xiao WU</a></h2>
+                            <h2><a href="index.html">Leila bahrami</a></h2>
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -68,21 +68,16 @@
                     <div class="col-md-5">
                         <h3>Ecological Analysis of the Arctic National Wildlife Refuge</h3>
                         <p>
-                          <h4><b>Audubon Alaska</b></h4>
+                          <h4><b>Intro</b></h4>
                           <br>
-                          <a href="http://ak.audubon.org/">Audubon Alaska</a> is an organization working on conserving Alaska’s natural ecosystems, focusing on birds, other wildlife, and their habitats, for the benefit and enjoyment of current and future generations. The main study area of this project, the <a href="https://en.wikipedia.org/wiki/Arctic_National_Wildlife_Refuge">Arctic National Wildlife Refuge</a> coastal plain was recently opened to oil development. This action will result in lots of change in evaluating the wildlife and environmental resources. Audubon Alaska is aiming at using maps and geospatial analysis to inform a broad audience including agency decision-makers, scientists, congressional staff and environmental groups of the results of this action.
-                          <br>
-                          <br>
-                          <h4><b>Tasks</b></h4>
-                          <br>
-                          The three major tasks in this project are: creating a map atlas of the wildlife and environmental resources at stake, digitizing historical maps into vector shapefile or raster datasets, and perform species distribution modeling on specific species.
+                          New Jersey's salt marsh grasses, essential for coastal health and storm protection, are increasingly threatened by rising sea levels and storms. Current land cover data (NLCD) doesn't differentiate between low and high marsh. Current NLCD data fails to distinguish between low and high marsh, making it difficult to identify and locate endangered high marsh species. To improve this, our team surveyed four sites in Jenkins Sound, NJ, using UAVs with multispectral cameras and GPS, enabling more accurate identification of high marsh areas including Spartina alterniflora, Spartina patens, and Distichlis spicata inorder , to support their conservation.
                           <br>
                           <br>
-                          <h4><b>Difficulties</b></h4>
+                          <h4><b>Methodology</b></h4>
                           <br>
-                          The major difficulties of this project are the gaps between datasets and to downscale them to the coastal plain. I utilized the wide range of dataset provided by Audubon Alaska using ArcMap and performed species distribution modeling in R to create and visualize the mid-scale dataset. I also used R packages and remote sensing techniques in R to automate digitizing the historical maps.
+                          We utilized a UAV equipped with a multispectral camera to capture color infrared images of three out of four surveyed areas in Jenkins Sound, NJ. In next step, I analyzed the multi-band imageries to differentiate key land cover classifications, including open water, developed land, low marsh (Spartina alterniflora), and high marsh (Spartina patens and Distichlis spicata), based on their distinct spectral wavelengths. Elevation data from field surveys were integrated with spectral information to accurately identify and map high marsh zones throughout the bay.
                           <br>
-                          <br>
+                          <br>                          
                         </p>
 
                         <div class="btn-load-more">
@@ -103,7 +98,7 @@
         </div>
         <footer>
             <div class="main-footer">
-                <p> Copyright © 2019 By Xiao WU</p>
+                <p> Copyright © 2024 By Leila Bahrami</p>
                 <p>Made with Bootstrap Jquery.</p>
                 <div class="icons">
                     <ul>
