--- a/DistichlisSensing.html
+++ b/DistichlisSensing.html
@@ -50,10 +50,10 @@
             <div class="pic index2-picture" style="background: url(assets/images/audubon-alaska-background.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3><b>Ecological Analysis of
+                    <h3><b>Distichlis Sensing
                       <br>
-                      <br>
-                      the Arctic National Wildlife Refuge</b>
+                      <br>                      
+                        Using UAS multispectral imagery to improve marsh classification in NJ Coast</b>
                     </h3>
                 </div>
             </div>
