--- a/DistichlisSensing.html
+++ b/DistichlisSensing.html
@@ -47,7 +47,7 @@
             </div>
         </header>
         <div class="first-content">
-            <div class="pic index2-picture" style="background: url(assets/images/Distichlis-Sensing-bg.png);">
+            <div class="pic index2-picture" style="background: url(assets/images/Distichlis-Sensing-bg.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
                     <h3><b>Distichlis Sensing
