--- a/DistichlisSensing.html
+++ b/DistichlisSensing.html
@@ -66,7 +66,7 @@
                         <img src="assets/images/2018-audubon-alaska-02.jpg" alt="">
                     </div>
                     <div class="col-md-5">
-                        <h3>Ecological Analysis of the Arctic National Wildlife Refuge</h3>
+                        <h3>Using UAS multispectral imagery to locate and identify high marsh species in NJ Coast</h3>
                         <p>
                           <h4><b>Intro</b></h4>
                           <br>
