--- a/DistichlisSensing.html
+++ b/DistichlisSensing.html
@@ -81,7 +81,7 @@
                         </p>
 
                         <div class="btn-load-more">
-            						<a class="load-more" href="https://www.summerofmaps.com/projects/shortlist/2018-audubon-alaska">Scope</a>
+            						<a class="load-more" href="https://https://emlabupenn.com/Distichlis-Sensing">Website</a>
                         </div>
 
                         <div class="details">
