--- a/DistichlisSensing.html
+++ b/DistichlisSensing.html
@@ -85,12 +85,12 @@
                         </div>
 
                         <div class="details">
-                            <h6> Client </h6>
-                            <span>Audubon Alaska</span>
+                            <h6> Advisors </h6>
+                            <span>Sean Burkholder, Karen M’Closkey and Keith VanDerSys</span>
                             <h6> Categories </h6>
-                            <span>Geospatial Analysis</span>
+                            <span>Remote Sensing , ArcGIS</span>
                             <h6> Date </h6>
-                            <span>06/2018 – 12/2018</span>
+                            <span>06/2021 – 06/2022</span>
                         </div>
                     </div>
                 </div>
