--- a/DistichlisSensing.html
+++ b/DistichlisSensing.html
@@ -52,8 +52,8 @@
                 <div class="content">
                     <h3><b>Distichlis Sensing
                       <br>
-                      <br>                      
-                        Using UAS multispectral imagery to improve marsh classification in NJ Coast</b>
+                      <br> 
+                      <h4>Using UAS multispectral imagery to improve marsh classification in NJ Coast <br>                                             
                     </h3>
                 </div>
             </div>
