--- a/DistichlisSensing.html
+++ b/DistichlisSensing.html
@@ -12,7 +12,7 @@
       </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Xiao WU</title>
+        <title>Leila Bahrami</title>
         <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700|Quattrocento+Sans:400,700|Palanquin:400,600|Raleway|Josefin+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/font-awesome.css">
         <link rel="stylesheet" href="assets/css/owl.carousel.css">
