--- a/GreenNewDeal.html
+++ b/GreenNewDeal.html
@@ -47,7 +47,7 @@
             </div>
         </header>
         <div class="first-content">
-            <div class="pic index2-picture" style="background: url(assets/images/aboutimage3.jpg);">
+            <div class="pic index2-picture" style="background: url(assets/images/GND_bg.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
                     <h3><b>Where are the Monarch Butterflies?</b>
