--- a/GreenNewDeal.html
+++ b/GreenNewDeal.html
@@ -50,12 +50,12 @@
             <div class="pic index2-picture" style="background: url(assets/images/GND_bg.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3><b>Where are the Monarch Butterflies?</b>
+                    <h3><b>ASLA Award Project:</b>
+                    <h3><b>Designing a Green New Deal</b>
                     </h3>
                     <br>
                     <br>
-                    <h4>A Brief Exploration of Monarch Butterfly Population Change from 1997-2007 <br>
-                      <br>using ArcGIS, Google Earth Engine API and ArcPy
+                    <h4>An interdisciplinary studio for designing a Green New Deal followed by various phases of design research and analysis, and ultimately a report for policymakers and an exhibit of creative work for the public. <br>
                     </h4>
                 </div>
             </div>
