--- a/GreenNewDeal.html
+++ b/GreenNewDeal.html
@@ -70,33 +70,28 @@
                         <img src="assets/images/2017-MonarchButterfly-4.jpg" alt="">
                     </div>
                     <div class="col-md-5">
-                        <h3>Where are the Monarch Butterflies?</h3>
-                        <p>The North American monarch population is notable for its annual southward late-summer and autumn migration from the northern and central United States and southern Canada to Florida or Mexico. Their migration corridors are the one along the west coast, the one in the center of the states crossing the corn belt and the one along the east coast. These migrations happen twice a year accomplished by four generations of Monarch Butterflies. Although these are the three mainly recognized migration corridors that Monarch Butterflies show up the most, their Migration pattern slightly changes every year because of the land cover change, climate and etc. There is a lot of citizen science data online reporting about the spots where they are found every year. 
+                        <h3>Project Statement</h3>
+                        <p>According to IPCC, we have less than 12 years to prevent exceeding 1.5°C of global warming, risking irreversible impacts. In response, House Resolution 109 (HR-109), the Green New Deal, was introduced in 2019 aiming for carbon neutrality by 2050 through sustainable job creation. Although it promises significant investment in infrastructure like housing, transit, and parks, details on practical implementation remain sparse. This studio explores how designers can help translate the Green New Deal into actionable, real-world change. 
                           <br>
+                        <h3>Project Narrative</h3>
+                        <p>In the "Designing a Green New Deal" studio, we tackled two central questions for the Green New Deal (GND): (1) which U.S. regions should be prioritized to meet GND goals on carbon reduction, justice, and jobs, and (2) where initial investments should be directed. The studio’s efforts led to a public exhibition and policy brief aimed at involving landscape architects in climate politics and sparking public engagement with the GND.
+The project began with an analysis of the New Deal’s environmental and infrastructural legacy, highlighting agencies like the Tennessee Valley Authority and Civilian Conservation Corps. Inspired by the New Deal’s focus on resistant regions, interdisciplinary teams researched five GND sectors—energy, transportation, housing, food, and land/water—leading to a consensus on three priority regions: Appalachia, the Mississippi Delta, and the Midwest.
+                          <br>                          
+                          <h3>Mississippi Delta Region</h3>
+                          <p>Each regional team developed proposals tailored to local needs. In the Mississippi Delta, proposals focus on decommissioning petrochemical sites and restoring wetlands. Restored coastal marshes capture atmospheric carbon, while decommissioned oil rigs are repurposed with wind turbines to support coral reef growth. These remediation efforts foster high-wage jobs and build ecological buffers against future storms. 
                           <br>
-                          This kind of butterfly is also mostly recognized as an iconic pollinator species. A study in 2016 showed that Monarch Population decreased to one-tenth in the last decade due to the loss of breeding habitat. The aim of this research is to examine the Monarch population change throughout time and space, and also explore the relationship between monarch migration pattern change and vegetation change. 
-                          <br>
-                          <br>
-                          In terms of data, in this analysis, the citizen science data from Monarch Watch would be used as the main data for analyzing their migration pattern and population change throughout time and space. This research will include a time span of 1997 to 2017. The first part of the research is about preparing the data for analysis, downloading the data from Monarch Watch as CSV and export them as shapefiles using Python. 
-                          <br>
-                          <br>
-                          In the range of space, the total Monarch population in states will be summarized to see if they are migrating in the way that ecologists suggest. I will also try to normalize the total monarch population to decline the effect that they are spotted because of human presence. The states with the most Monarch Butterfly population or normalized Monarch Butterfly population will be highlighted in the maps, therefore, an actual monarch migration or presence corridor would be clearly displayed in the United States. 
-                          <br>
-                          <br>
-                          In the range of time, because the number of observations of Monarch Butterfly might be unreasonable to be compared throughout the years, the rankings of one state among all the states is still possible to be compared in this research. So that the comparison in the time range is done using this method. 
-                          <br>
-                          <br>
-                          After examining their migration pattern and population change, a brief analysis related to land cover based on MODIS data will also be included in the third part of the analysis to explore which kind of landcover change is related to the monarch population the most. By calculating the mean kernel density of each type of landcover change, the relationship between Monarch Butterfly population and land cover type change would also be discussed.
-                          <br>
+                          <h3>Public Exhibition</h3>
+                          <p>To engage the public with the transformations resulted from Green New Deal, a public exhibition of work aimed at communicating three core messages: (1) the New Deal’s transformative impact on the environment, (2) the importance of prioritizing Appalachia, the Delta, and the Midwest, and (3) the GND’s potential for both large-scale interventions, like a regional rail line, and community-focused projects, like regenerative farming. 
+                          <br>                          
                           <br>
                         </p>
                         <div class="details">
                             <h6> Instructor </h6>
-                            <span>Professor Dana Tomlin</span>
+                            <span>Professor Richard Weller, Professor Billy Fleming</span>
                             <h6> Categories </h6>
-                            <span>Geospatial Analysis</span>
+                            <span>Research, Planning, Geospatial Analysis</span>
                             <h6> Date </h6>
-                            <span>09/2017 – 12/2017</span>
+                            <span>09/2019 – 12/2019</span>
                         </div>
                     </div>
                 </div>
