--- a/GreenNewDeal.html
+++ b/GreenNewDeal.html
@@ -64,10 +64,13 @@
             <div class="container">
                 <div class="row items1">
                     <div class="col-md-7">
-                        <img src="assets/images/2017-MonarchButterfly-1.jpg" alt="">
-                        <img src="assets/images/2017-MonarchButterfly-2.jpg" alt="">
-                        <img src="assets/images/2017-MonarchButterfly-3.jpg" alt="">
-                        <img src="assets/images/2017-MonarchButterfly-4.jpg" alt="">
+                        <img src="assets/images/GND1.jpg" alt="">
+                        <img src="assets/images/GND2.jpg" alt="">
+                        <img src="assets/images/GND3.jpg" alt="">
+                        <img src="assets/images/GND4.jpg" alt="">
+                        <img src="assets/images/GND5.jpg" alt="">
+                        <img src="assets/images/GND6.jpg" alt="">
+                        <img src="assets/images/GND7.jpg" alt="">                        
                     </div>
                     <div class="col-md-5">
                         <h3>Project Statement</h3>
