--- a/DistichlisSensing.html
+++ b/DistichlisSensing.html
@@ -82,7 +82,7 @@
                         </p>
 
                         <div class="btn-load-more">
-            						<a class="load-more" href="https://https://emlabupenn.com/Distichlis-Sensing">Website</a>
+            						<a class="load-more" href="https://emlabupenn.com/Distichlis-Sensing">Website</a>
                         </div>
 
                         <div class="details">
