--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ factory closures, and ecological restoration</a></h5>
 						<img src="assets/images/EPA_bg1.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="ED.html">Campus Rainwork Challenge: Growing Together</a></h3>
-								<h5><a href="ED.html">EPA Award Project: A COMMUNITY FOOD FOREST FOR STORMWATER
+								<h3><a href="EPA.html">Campus Rainwork Challenge: Growing Together</a></h3>
+								<h5><a href="EPA.html">EPA Award Project: A COMMUNITY FOOD FOREST FOR STORMWATER
 MANAGEMENT AT ANDREW HAMILTON
 SCHOOL</a></h5>
 							</div>
