--- a/EPA.html
+++ b/EPA.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="logo">
-                            <h2><a href="index.html">Xiao WU</a></h2>
+                            <h2><a href="index.html">Leila Bahrami</a></h2>
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -47,10 +47,10 @@
             </div>
         </header>
         <div class="first-content">
-            <div class="pic index2-picture" style="background: url(assets/images/ED_render.jpg);">
+            <div class="pic index2-picture" style="background: url(assets/images/EPA_bg.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3><b>The Exchange District</b>
+                    <h3><b>Growing Together</b>
                     </h3>
                 </div>
             </div>
@@ -74,11 +74,12 @@
                         <img src="assets/images/ED_render_summer.jpg" alt="">
                     </div>
                     <div class="col-md-5">
-                        <h3>The Exchange District</h3>
+                        <h3>Growing Together</h3>
                         <br>
-                        <h4>Exchanging challenges with opportunities and risks with strengths for Toronto</h4>
+                        <h4>The Story of How our Winning design proposal is Making a Real Difference to Andrew Hamilton School</h4>
                         <p>
-                          Hey neighbor! Discover the Exchange District - the link connecting West Don Lands, Riverdale, and East Harbor to all of Toronto. Whether a resident, worker, or visitor, the Exchange District showcases the best of Toronto! The district proves the possible - exchanging challenges with opportunities and risks with strengths. These exchanges shine brightest in the district’s endless pursuit of diversity, resilience, and community.
+                          
+Andrew Hamilton Elementary School in West Philadelphia lacks green space, healthy food access, and stormwater management, underscoring the need for sustainable, food-producing green stormwater infrastructure (GSI) to support students and the community. Our design will reduce the school’s stormwater fees, mitigate local flooding, alleviate urban heat, and improve access to fresh food. Key features include a green roof, rain gardens, raised beds, a food forest, and permeable pavers. To engage students, we’ll add educational signage, watershed and nutrition-focused curricula, and a mural on urban water resilience. Partnering with school leadership and organizations like the Philadelphia Water Department, the Netter Center, and the Philadelphia Orchard Project, we aim to establish AHS as a sustainable community hub.
                           <br>
                           <br>
                           <h4>Experience Diversity</h4>
