--- a/EPA.html
+++ b/EPA.html
@@ -77,8 +77,8 @@
                         <h3>Growing Together</h3>
                         <br>
                         <h4>The Story of How our Winning design proposal is Making a Real Difference to Andrew Hamilton School</h4>
-                        <p>
-                          
+                        <h3>Project Statement</h3>
+                         <p> 
 Andrew Hamilton Elementary School in West Philadelphia lacks green space, healthy food access, and stormwater management, underscoring the need for sustainable, food-producing green stormwater infrastructure (GSI) to support students and the community. Our design will reduce the school’s stormwater fees, mitigate local flooding, alleviate urban heat, and improve access to fresh food. Key features include a green roof, rain gardens, raised beds, a food forest, and permeable pavers. To engage students, we’ll add educational signage, watershed and nutrition-focused curricula, and a mural on urban water resilience. Partnering with school leadership and organizations like the Philadelphia Water Department, the Netter Center, and the Philadelphia Orchard Project, we aim to establish AHS as a sustainable community hub.
                           <br>
                           <br>
