--- a/EPA.html
+++ b/EPA.html
@@ -52,6 +52,8 @@
                 <div class="content">
                     <h3><b>Growing Together</b>
                     </h3>
+                    <h4>A Community Food Forest for Stormwater Management at Andrew Hamilton School </b>
+                    </h4>
                 </div>
             </div>
         </div>
