--- a/EPA.html
+++ b/EPA.html
@@ -85,11 +85,17 @@
 Andrew Hamilton Elementary School in West Philadelphia lacks green space, healthy food access, and stormwater management, underscoring the need for sustainable, food-producing green stormwater infrastructure (GSI) to support students and the community. Our design will reduce the school’s stormwater fees, mitigate local flooding, alleviate urban heat, and improve access to fresh food. Key features include a green roof, rain gardens, raised beds, a food forest, and permeable pavers. To engage students, we’ll add educational signage, watershed and nutrition-focused curricula, and a mural on urban water resilience. Partnering with school leadership and organizations like the Philadelphia Water Department, the Netter Center, and the Philadelphia Orchard Project, we aim to establish AHS as a sustainable community hub.
                           <br>
                           <br>
-                          <h4>Experience Diversity</h4>
-                          <br>
-                          As Toronto becomes more diverse, both demographically and socio-economically, fewer spaces allow for the harmonious mingling of differences. Rising housing unaffordability segregates the city between the served and the under-served. Diversity of thought and experience, however, breeds creativity, compassion and community, and must be celebrated and promoted. The district will provide a home for those with diverse backgrounds, exchanging any financial burden with opportunity to thrive. Half of all housing will serve low-income and workforce housing. Furthermore, housing types will provide opportunities to rent and own, for families small and large.
-                          <br>
-                          Walking through the expansive Toronto Exchange Market, one will encounter, through sight, sound and smell, the incredible cultural diversity of Toronto. There, patrons will exchange not only in commerce, but also in experience.
+                          <h4>Project Goals</h4>                          
+                          <p>                          
+                          This proposal aims to benefit the environment, students, and the surrounding community through seven goals:
+
+Improve water quality in Cobbs Creek and the Delaware River by reducing runoff.
+Increase resilience to severe weather by reducing impermeable surfaces and adding rainwater capture.
+Create a peaceful garden space to enhance mental well-being for students and residents.
+Provide access to fresh produce, promoting healthy eating and connection to food sources.
+Address environmental injustices by mitigating the urban heat island effect and enhancing green space access.
+Engage students by incorporating their ideas into the design process.
+Develop GSI-oriented curricula to strengthen STEM education and environmental stewardship.
                           <br>
                           <br>
                           <h4>Establish Resilience</h4>
