--- a/EPA.html
+++ b/EPA.html
@@ -89,16 +89,16 @@ Andrew Hamilton Elementary School in West Philadelphia lacks green space, health
                           <p>                          
                           This proposal aims to benefit the environment, students, and the surrounding community through seven goals:
 
-Improve water quality in Cobbs Creek and the Delaware River by reducing runoff.
-Increase resilience to severe weather by reducing impermeable surfaces and adding rainwater capture.
-Create a peaceful garden space to enhance mental well-being for students and residents.
-Provide access to fresh produce, promoting healthy eating and connection to food sources.
-Address environmental injustices by mitigating the urban heat island effect and enhancing green space access.
-Engage students by incorporating their ideas into the design process.
-Develop GSI-oriented curricula to strengthen STEM education and environmental stewardship.
+1. Improve water quality in Cobbs Creek and the Delaware River by reducing runoff.
+2. Increase resilience to severe weather by reducing impermeable surfaces and adding rainwater capture.
+3. Create a peaceful garden space to enhance mental well-being for students and residents.
+4. Provide access to fresh produce, promoting healthy eating and connection to food sources.
+5. Address environmental injustices by mitigating the urban heat island effect and enhancing green space access.
+6. Engage students by incorporating their ideas into the design process.
+7. Develop GSI-oriented curricula to strengthen STEM education and environmental stewardship.
                           <br>
                           <br>
-                          <h4>Establish Resilience</h4>
+                          <h4>Community Engagement and Education</h4>
                           <br>
                           The mighty Don River, running on the western edge of the Exchange District presents its immediately surrounding areas with great opportunity. Leveraging the site’s ecological resources, the district exchanges the flood liability with community assets. Residents and visitors alike will enjoy bountiful public green space, which include the extension of East Harbour’s River’s Edge Park and the new Flooded Shore Amphitheater.
                           <br>
